--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "commit": "node @commitlint/prompt-cli/cli.js",
+    "test": "test"
   },
   "dependencies": {
     "@types/node": "^17.0.33",
@@ -14,10 +16,13 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.2",
+    "@commitlint/config-conventional": "^17.0.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
     "@vitejs/plugin-react": "^1.3.0",
+    "husky": "^8.0.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.7"
   }
