--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,44 +7,17 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-#   tests:
-#     name: Tests
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v2
-
-#       - name: Start containers
-#         run: docker-compose -f infra/docker-compose.development.yml up -d
-
-#       - uses: actions/cache@v2
-#         with:
-#           path: ${{ github.workspace }}/.next/cache
-#           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-#           restore-keys: |
-#             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
-#       - uses: actions/setup-node@v2
-#         with:
-#           node-version: 16
-#           cache: 'npm'
-#       - run: npm ci
-#       - run: npm run dev & npx jest --runInBand
-
-#       - name: Stop containers
-#         if: always()
-#         run: docker-compose -f infra/docker-compose.development.yml down
-
-#   lint-styles:
-#     name: Lint Styles
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v2
-#       - uses: actions/setup-node@v2
-#         with:
-#           node-version: 16
-#           cache: 'npm'
-#       - run: npm ci
-#       - run: npm run lint
-
+  lint-styles:
+    name: Lint Styles
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16
+          cache: 'npm'
+      - run: npm ci
+      - run: npm run lint
   lint-commits:
     name: Lint Commits
     runs-on: ubuntu-latest
