--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "@types/node": "^17.0.33",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
