--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,19 @@
     "semi": true,
     "singleQuote": true,
     "tabWidth": 2,
-    "useTabs": false
+    "useTabs": false,
+    "importOrder": [
+        "@assets/(.*)$",
+        "@components/(.*)$",
+        "@hooks/(.*)$",
+        "@interfaces/(.*)$",
+        "@pages/(.*)$",
+        "@requests/(.*)$",
+        "@routes/(.*)$",
+        "@services/(.*)$",
+        "@utils/(.*)$",
+        "^[./]"
+    ],
+    "importOrderSeparation": true,
+    "importOrderSortSpecifiers": true
 }
