--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,16 @@
     "@types/node": "^17.0.33",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-markdown": "^8.0.7",
     "react-router-dom": "6",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
+    "@types/uuid": "^9.0.4",
     "@vitejs/plugin-react": "^1.3.0",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
